# tetrode-ephys

./: .gitignore  .travis.yml  Paths_tetrode_ephys.hs  README.md  default.nix  shell.nix  tetrode-ephys.cabal
backup-cabal-sandbox/: world
backup-cabal-sandbox/x86_64-linux-ghc-7.6.3-packages.conf.d/: GLURaw-1.4.0.0-88abe98644607d4c65d0fe9f1d3c1e7d.conf  GLUT-2.4.0.0-8e196605bb5ed97fd6b5d62ae76d19c6.conf  KdTree-0.2.1-b48f7ad4dded1e674315dcefbf8cb2ab.conf  OpenGL-2.8.0.0-0daf49e74f4d94b59d640266839bc1a6.conf  OpenGLRaw-1.3.0.0-3fbff47a4ddc1013a8c98f1c46bbcf28.conf  QuickCheck-2.7.3-059c4073a18614553c60caba7074320a.conf  aeson-0.7.0.3-20053fb5c6a139a7db54ac3df05a6e7a.conf  async-2.0.1.5-de15d02f02f46532e7c526ac9eee43c3.conf  attoparsec-0.11.3.0-c738a8f0d9e6d74c516d084168191856.conf  bifunctors-4.1.1.1-b1a84157250b46127c8eb3a8892271c1.conf  binary-0.7.2.0-9951e40074eafb9b578212322241915c.conf  bmp-1.2.5.2-d4761677be9d08208406bddacfba6735.conf  cereal-0.4.0.1-5f41a0570e88b8831b91929ce703f113.conf  cmdargs-0.10.7-978e22a709bf93ee6bf7e9fb3cb93695.conf  comonad-4.2-a4ae9d275ccbba539106194a2746b475.conf  contravariant-0.6-cb4a4234ee8a620e20ed9207b7606ba0.conf  cpu-0.1.2-3b02d529cdddb2f52c525cb452593e85.conf  data-binary-ieee754-0.4.4-6ba4a289963a0dbe52348f8848234a93.conf  distributive-0.4.4-31280925967d7840defeb2b6aced989f.conf  dlist-0.7.0.1-6de0835e428010b5348c74d4bd3e5ff4.conf  exceptions-0.6.1-f70f88b82839651399b93a47289c5b73.conf  free-4.7.1-e6253046b81a2e30d3e4fbe1712bb14c.conf  gloss-1.8.1.2-288ba9ab0f444fe0fc11f1a1dced4db2.conf  hashable-1.2.2.0-5c415b232854b5fb961fe4923ec037c7.conf  hmatrix-0.15.2.1-451bdc1eb6a8df92d3eb3592145120df.conf  lens-4.1.2-f21b6c28281e33c60d05c979f139a034.conf  mmorph-1.0.3-d0ded567a67b609b5c52e8ae3db55ed5.conf  mtl-2.0.1.1-931c32aee0a9bdeaf8811a8c74b8921d.conf  mwc-random-0.13.1.1-fa70ad0002bce6ea8f810bec0ed4a382.conf  nats-0.2-9cf4722630a9e69f3ae1d02ce11854f8.conf  package.cache  parallel-3.2.0.4-6b28f3e9db87f9045e4a465cbf1af2ba.conf  parsec-3.1.5-1d167977b0465ef4dfd7f7668aec6261.conf  prelude-extras-0.4-72ea6294a42dfe816914d881e93173f3.conf  primitive-0.5.3.0-7b5ab7d915f9ab4fe7ef3c28d7621c35.conf  profunctors-4.0.4-6d836ac440bc7188ca462c60a63d7a30.conf  random-1.0.1.1-43fdc5da991685d8a0ec8cb553880cf8.conf  reflection-1.4-59f99121e5a30d4841518e6b3345f9ed.conf  safe-0.3.4-ba52ca348aecad429ba90450e3aba4c4.conf  scientific-0.2.0.2-45d0a2b52667d7b9be4651853abb8053.conf  (+17 more)
lib/: spikeWaveform.hs
lib/Data/: Ephys.hs
lib/Data/Ephys/: Cluster.hs  DiagramsPictures.hs  EphysDefs.hs  GlossPictures.hs  PlaceCell.hs  Position.hs  PositionDecoding.hs  Spike.hs  Timeseries.hs  TrackPosition.hs
lib/Data/Ephys/OldMWL/: FileInfo.hs  Header.hs  Parse.hs  ParseClusterFile.hs  ParsePFile.hs  ParsePxyabw.hs  ParseSpike.hs
lib/Data/Ephys/TimeSignal/: Filter.hs
lib/Data/Ephys/Timeseries/: Resample.hs  Types.hs
lib/Data/Map/: KDMap.hs
lib/Data/OldMWL/: FileHeader.hs
samples/: RenderRoutines.hs  clusters.hs  watchfield.hs  watchfields.hs  watchpos.hs
utils/: drawKD.hs  drawSpline.hs  mwlCutTTHead.hs  mwlfileutils.hs  panspike.hs  posCutHead.hs
