Name:        tetrode-ephys
Version:     0.1.0
License:     GPL-3
License-File: LICENSE
Copyright:       (c) 2013 Greg Hale
Author:          Greg Hale
Maintainer:      Greg Hale <imalsogreg@gmail.com>
Stability:       Experimental
Homepage:        http://github.com/ImAlsoGreg/haskell-tetrode-ephys
Bug-Reports:     http://github.com/ImAlsoGreg/haskell-tetrode-ephys/issues
Category:        Science
Build-Type:      Simple
Synopsis:        Haskell stuff for tetrodes, clusters, and stimuli
Cabal-Version:   >=1.8
Extra-Source-Files: README.md
Description:
  Data types for tetrodes, spike clusters, spike wave forms, spike parameters, subejct location information.

Source-Repository head
  Type:     git
  Location: git://github.com/ImAlsoGreg/haskell-tetrode-ephys.git

Library
  Hs-Source-Dirs: lib
  Ghc-Options:     -O2 -threaded -rtsopts -with-rtsopts=-N4
  Build-Depends:
    base   (>= 4 && <= 5)
    , containers
    , cereal
    , vector
    , vector-binary-instances
    , text
    , time
    , bytestring
    , parsec
    , hashable
    , pipes (>= 4.0 && <= 5.0)
    , binary
    , pipes-binary
    , pipes-bytestring (> 1.0.0)
    , unordered-containers
    , cpu
    , hmatrix
    , lens
    , pipes-rt (>= 0.4 && < 0.5)
    , KdTree
  Exposed-Modules:
    Data.Ephys
    Data.Ephys.EphysDefs
    Data.Ephys.Spike
    Data.Ephys.Cluster
    Data.Ephys.Position
    Data.Ephys.TrackPosition
    Data.Ephys.PlaceCell
    Data.Ephys.PositionDecoding
    Data.Ephys.OldMWL.FileInfo
    Data.Ephys.OldMWL.Parse
    Data.Ephys.OldMWL.ParseClusterFile
    Data.Ephys.OldMWL.ParsePFile
    Data.Ephys.TimeSignal.Filter

Executable clusters
  Hs-Source-Dirs: samples
  Main-Is:        clusters.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  bytestring,
                  text,
                  tetrode-ephys,
                  pipes-rt

Executable watchpos
  Hs-Source-Dirs: samples
  Main-Is:        watchpos.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  gloss (>=1.8.1.1 && <2),
                  tetrode-ephys 

Executable watchfield
  Hs-Source-Dirs: samples
  Main-Is:        watchfield.hs
  Ghc-Options:    -threaded
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  stm,
                  async,
                  gloss (>=1.8.1.1 && <2),
                  bytestring,
                  tetrode-ephys,
                  pipes-rt