Name:        tetrode-ephys
Version:     0.1.0
License:     GPL-3
License-File: LICENSE
Copyright:       (c) 2013 Greg Hale
Author:          Greg Hale
Maintainer:      Greg Hale <imalsogreg@gmail.com>
Stability:       Experimental
Homepage:        http://github.com/ImAlsoGreg/haskell-tetrode-ephys
Bug-Reports:     http://github.com/ImAlsoGreg/haskell-tetrode-ephys/issues
Category:        Science
Build-Type:      Simple
Synopsis:        Haskell stuff for tetrodes, clusters, and stimuli
Cabal-Version:   >=1.8
Extra-Source-Files: README.md
Description:
  Data types for tetrodes, spike clusters, spike wave forms, spike parameters, subejct location information.

Source-Repository head
  Type:     git
  Location: git://github.com/ImAlsoGreg/haskell-tetrode-ephys.git

Library
  Hs-Source-Dirs: lib
  Ghc-Options:     -O2 -threaded -fprof-auto -funbox-strict-fields -rtsopts -with-rtsopts=-N4
  Build-Depends:
    base   (>= 4 && <= 5)
    , containers
    , directory
    , cereal
    , vector (>= 0.10 && < 0.10.10)
    , vector-binary-instances
    , text (>= 1.1.0.0 && < 1.1.1)
    , time
    , bytestring
    , parsec
    , hashable
    , pipes (==4.0.2)
    , binary (==0.6.4.0)
    , pipes-parse (==2.0.2)
    , pipes-binary (==0.2.1)
    , pipes-bytestring (== 1.0.3)
    , unordered-containers
    , cpu
    , hmatrix
    , lens     (>= 4.0 && < 4.1)
    , pipes-rt (>= 0.4 && < 0.5)
    , KdTree
    , gloss
    , safe
    , data-binary-ieee754
    , cmdargs
  Exposed-Modules:
    Data.Ephys
    Data.Ephys.EphysDefs
    Data.Ephys.Spike
    Data.Ephys.Cluster
    Data.Ephys.Position
    Data.Ephys.TrackPosition
    Data.Ephys.PlaceCell
    Data.Ephys.PositionDecoding
    Data.Ephys.Timeseries
    Data.Ephys.Timeseries.Filter
    Data.Ephys.GlossPictures
    Data.Ephys.OldMWL.Header
    Data.Ephys.OldMWL.FileInfo
    Data.Ephys.OldMWL.Parse
    Data.Ephys.OldMWL.ParseClusterFile
    Data.Ephys.OldMWL.ParsePxyabw
    Data.Ephys.OldMWL.ParsePFile


Executable clusters
  Hs-Source-Dirs: samples
  Main-Is:        clusters.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  bytestring,
                  text,
                  tetrode-ephys,
                  pipes-rt

Executable watchpos
  Hs-Source-Dirs: samples
  Main-Is:        watchpos.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  gloss (>=1.8.1.1 && <2),
                  tetrode-ephys 

Executable watchfield
  Hs-Source-Dirs: samples
  Main-Is:        watchfield.hs
  Ghc-Options:    -threaded -fprof-auto -rtsopts
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  stm,
                  async,
                  safe,
                  gloss (>=1.8.1.1 && <2),
                  bytestring,
                  tetrode-ephys,
                  pipes-rt

Executable mwlfileutil
  Hs-Source-Dirs: utils
  Main-Is:        mwlfileutils.hs
  Ghc-Options:    -threaded
  Build-Depends:  base,
                  pipes,
                  lens,
                  async,
                  tetrode-ephys

Executable posCutHead
  Hs-Source-Dirs: utils
  Main-Is:        posCutHead.hs
  Build-Depends:  base,
                  safe,
                  bytestring,
                  binary,
                  pipes,
                  pipes-bytestring,
                  pipes-binary,
                  lens,
                  binary,
                  data-binary-ieee754,
                  cmdargs,
                  tetrode-ephys