Name:        tetrode-ephys
Version:     0.1.0
License:     GPL-3
License-File: LICENSE
Copyright:       (c) 2013 Greg Hale
Author:          Greg Hale
Maintainer:      Greg Hale <imalsogreg@gmail.com>
Stability:       Experimental
Homepage:        http://github.com/ImAlsoGreg/haskell-tetrode-ephys
Bug-Reports:     http://github.com/ImAlsoGreg/haskell-tetrode-ephys/issues
Category:        Science
Build-Type:      Simple
Synopsis:        Haskell stuff for tetrodes, clusters, and stimuli
Cabal-Version:   >=1.10
Extra-Source-Files: README.md
Description:
  Data types for tetrodes, spike clusters, spike wave forms, spike parameters, subejct location information.

Source-Repository head
  Type:     git
  Location: git://github.com/ImAlsoGreg/haskell-tetrode-ephys.git

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: lib
  Ghc-Options:     -O2 -threaded -fprof-auto -funbox-strict-fields -rtsopts "-with-rtsopts=-N4"
  Build-Depends:
    base   (>= 4 && <= 5)
    , binary == 0.7.1.0
    , bytestring
    , containers
    , directory
    , cereal
    , cmdargs
    , cpu
    , data-binary-ieee754
    , gloss
    , hashable
    , lens
    , parsec
    , pipes
    , pipes-parse >= 3.0.1
    , pipes-binary >= 0.4
    , pipes-bytestring
    , pipes-rt
    , safe
    , safecopy >= 0.8 && < 0.9
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , vector-binary-instances
  Exposed-Modules:
    Data.Ephys
    Data.Ephys.EphysDefs
    Data.Ephys.Spike
    Data.Ephys.Cluster
    Data.Ephys.Position
    Data.Ephys.TrackPosition
    Data.Ephys.TrackSpec
    Data.Ephys.PlaceCell
    Data.Ephys.PositionDecoding
    Data.Ephys.Timeseries
    Data.Ephys.Timeseries.Filter
    Data.Ephys.GlossPictures
    Data.Ephys.OldMWL.Header
    Data.Ephys.OldMWL.FileInfo
    Data.Ephys.OldMWL.Parse
    Data.Ephys.OldMWL.ParseClusterFile
    Data.Ephys.OldMWL.ParseSpike
    Data.Ephys.OldMWL.ParsePxyabw
    Data.Ephys.OldMWL.ParsePFile
    Data.Map.KDMap

Executable clusters
  Default-Language: Haskell2010
  Hs-Source-Dirs: samples
  Main-Is:        clusters.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  bytestring,
                  text,
                  tetrode-ephys,
                  pipes-rt

Executable watchpos
  Default-Language: Haskell2010
  Hs-Source-Dirs: samples
  Main-Is:        watchpos.hs
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  gloss (>=1.8.1.1 && <2),
                  tetrode-ephys,
                  vector

Executable drawSpline
  Default-Language: Haskell2010
  Hs-Source-Dirs:   utils
  Main-Is:          drawSpline.hs
  Build-Depends:    base, gloss, tetrode-ephys

Executable watchfield
  Default-Language: Haskell2010
  Hs-Source-Dirs: samples
  Main-Is:        watchfield.hs
  Ghc-Options:    -threaded -fprof-auto -rtsopts
  Build-Depends:  base,
                  containers,
                  pipes,
                  lens,
                  stm,
                  async,
                  safe,
                  gloss (>=1.8.1.1 && <2),
                  bytestring,
                  tetrode-ephys,
                  pipes-rt,
                  vector

Executable mwlfileutil
  Default-Language: Haskell2010
  Hs-Source-Dirs: utils
  Main-Is:        mwlfileutils.hs
  Ghc-Options:    -threaded
  Build-Depends:  base,
                  pipes,
                  lens,
                  async,
                  tetrode-ephys

Executable posCutHead
  Default-Language: Haskell2010
  Hs-Source-Dirs: utils
  Main-Is:        posCutHead.hs
  Build-Depends:  base,
                  safe,
                  bytestring,
                  binary,
                  pipes,
                  pipes-bytestring,
                  pipes-binary,
                  lens,
                  binary,
                  data-binary-ieee754,
                  cmdargs,
                  tetrode-ephys

Executable drawKD
  Default-Language: Haskell2010
  HS-Source-Dirs: lib utils
  Main-Is:        drawKD.hs
  Ghc-Options:    -threaded
  Other-Modules:  
    Data.Ephys
    Data.Ephys.EphysDefs
    Data.Ephys.Spike
    Data.Ephys.Cluster
    Data.Ephys.Position
    Data.Ephys.TrackPosition
    Data.Ephys.PlaceCell
    Data.Ephys.PositionDecoding
    Data.Ephys.Timeseries
    Data.Ephys.Timeseries.Filter
    Data.Ephys.GlossPictures
    Data.Ephys.OldMWL.Header
    Data.Ephys.OldMWL.FileInfo
    Data.Ephys.OldMWL.Parse
    Data.Ephys.OldMWL.ParseSpike
    Data.Ephys.OldMWL.ParseClusterFile
    Data.Ephys.OldMWL.ParsePxyabw
    Data.Ephys.OldMWL.ParsePFile
    Data.Map.KDMap
  Build-Depends:  
    async
    , gloss
    , stm
    , tetrode-ephys
    , base   (>= 4 && <= 5)
    , containers
    , directory
    , cereal
    , vector
    , vector-binary-instances
    , text
    , time
    , bytestring
    , parsec
    , hashable
    , pipes
    , binary
    , pipes-parse >= 3.0.1
    , pipes-binary >= 0.4
    , pipes-bytestring
    , transformers
    , unordered-containers
    , cpu
    , lens
    , pipes-rt
    , gloss
    , safe
    , data-binary-ieee754
    , cmdargs
